--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.1",
+    "@types/react": "^18.2.6",
     "axios": "^1.4.0",
+    "json-server": "^0.17.3",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.2.1",
+    "@types/node": "^20.2.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   }
 }
